--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -49,7 +49,7 @@
     <color name="account_icon_light">#eeeeee</color>
     <color name="account_icon_dark">@color/black</color>
 
-    <color name="red">#FF285C</color>
+    <color name="red">#FF3A69</color>
     <color name="yellow">#FFE711</color>
 
     <color name="bar_bg_64">#A8252528</color>
