--- a/feature-staking-impl/src/main/res/layout/fragment_review_custom_validators.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_review_custom_validators.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/black"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
@@ -12,36 +12,37 @@
         android:id="@+id/reviewCustomValidatorsToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:textRight="@string/common_edit"
-        app:titleText="@string/staking_confirm_selected_validators" />
+        app:dividerVisible="false"
+        app:titleText="@string/staking_confirm_selected_validators"
+        tools:textRight="@string/common_edit" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/reviewCustomValidatorsAccounts"
-            style="@style/TextAppearance.NovaFoundation.CapsTitle2"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Caps2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            tools:text="@string/staking_selected_validators_format"
             android:textAllCaps="true"
-            android:textColor="@color/gray1" />
+            android:textColor="@color/white_80"
+            tools:text="@string/staking_custom_header_validators_title" />
 
         <TextView
-            style="@style/TextAppearance.NovaFoundation.CapsTitle2"
+            style="@style/TextAppearance.NovaFoundation.SemiBold.Caps2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginStart="16dp"
             android:text="@string/staking_rewards_apy"
             android:textAllCaps="true"
-            android:textColor="@color/gray1" />
+            android:textColor="@color/white_80" />
     </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
