--- a/common/src/main/res/layout/view_placeholder.xml
+++ b/common/src/main/res/layout/view_placeholder.xml
@@ -9,11 +9,12 @@
     tools:parentTag="android.widget.LinearLayout">
 
     <ImageView
+        android:id="@+id/viewPlaceholderImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:tint="@color/white_32"
-        android:src="@drawable/ic_planet_outline" />
+        android:src="@drawable/ic_planet_outline"
+        app:tint="@color/white_32" />
 
     <TextView
         android:id="@+id/viewPlaceholderText"
@@ -21,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        tools:textColor="@color/white_64"
+        android:textColor="@color/white_64"
         android:layout_marginBottom="32dp"
         android:gravity="center"
         tools:text="Your assets will appear here.\nMake sure the 'Hide zero balances' filter is turned off" />
