--- a/feature-crowdloan-impl/src/main/res/layout/fragment_my_contributions.xml
+++ b/feature-crowdloan-impl/src/main/res/layout/fragment_my_contributions.xml
@@ -46,18 +46,16 @@
         app:layout_constraintTop_toBottomOf="@id/myContributionsToolbar"
         tools:visibility="visible" />
 
-    <TextView
+    <io.novafoundation.nova.common.view.PlaceholderView
         android:id="@+id/myContributionsPlaceholder"
-        style="@style/TextAppearance.NovaFoundation.Body2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:drawablePadding="16dp"
-        android:gravity="center"
         android:text="@string/crowdloan_contributions_placeholder"
-        app:drawableTopCompat="@drawable/ic_placeholder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/myContributionsToolbar" />
+        app:layout_constraintTop_toBottomOf="@id/myContributionsToolbar"
+        app:layout_constraintVertical_bias="0.4"
+        app:showBackground="false" />
 </androidx.constraintlayout.widget.ConstraintLayout>
