--- a/common/src/main/res/drawable/divider_drawable.xml
+++ b/common/src/main/res/drawable/divider_drawable.xml
@@ -3,7 +3,7 @@
     <item android:gravity="bottom">
         <shape>
             <size android:height="1dp" />
-            <solid android:color="@color/dividerGray" />
+            <solid android:color="@color/white_16" />
         </shape>
     </item>
 </layer-list>
