--- a/feature-staking-impl/src/main/res/layout/view_network_info.xml
+++ b/feature-staking-impl/src/main/res/layout/view_network_info.xml
@@ -35,6 +35,7 @@
         android:paddingStart="16dp"
         android:visibility="gone"
         android:paddingEnd="16dp"
+        tools:visibility="visible"
         android:paddingBottom="12dp"
         app:layout_constraintTop_toBottomOf="@id/stakingNetworkInfo">
 
@@ -42,17 +43,20 @@
             android:id="@+id/stakingAboutTotalStake"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:dividerColor="@color/white_8"
             app:title="@string/staking_total_staked" />
 
         <io.novafoundation.nova.common.view.TableCellView
             android:id="@+id/stakingAboutMinimumStake"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:dividerColor="@color/white_8"
             app:title="@string/staking_main_minimum_stake_title" />
 
         <io.novafoundation.nova.common.view.TableCellView
             android:id="@+id/stakingAboutActiveNominators"
             android:layout_width="match_parent"
+            app:dividerColor="@color/white_8"
             android:layout_height="wrap_content"
             app:title="@string/staking_main_active_nominators_title" />
 
@@ -60,6 +64,7 @@
             android:id="@+id/stakingAboutStakingPeriod"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:dividerColor="@color/white_8"
             app:title="@string/staking_staking_period" />
 
         <io.novafoundation.nova.common.view.TableCellView
