Redesign confirm start staking / change validators

--- a/common/src/main/res/layout/view_toolbar.xml
+++ b/common/src/main/res/layout/view_toolbar.xml
@@ -53,8 +53,7 @@
         android:paddingEnd="@dimen/x2"
         android:textColor="?attr/colorAccent"
         android:visibility="gone"
-        tools:text="Action"
-        tools:visibility="visible" />
+        tools:text="Action" />
 
     <LinearLayout
         android:id="@+id/toolbarCustomActions"
