--- a/feature-staking-impl/src/main/res/layout/view_reward_destination_viewer.xml
+++ b/feature-staking-impl/src/main/res/layout/view_reward_destination_viewer.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    tools:background="@color/black"
-    android:orientation="vertical"
-    tools:parentTag="android.widget.LinearLayout"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    tools:parentTag="io.novafoundation.nova.common.view.TableView">
 
     <io.novafoundation.nova.common.view.TableCellView
         android:id="@+id/viewRewardDestinationDestination"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:dividerVisible="false"
-        app:title="@string/staking_rewards_destination_title_v2_0_0" />
+        app:title="@string/staking_reward_destination" />
 
-    <io.novafoundation.nova.common.view.LabeledTextView
+    <io.novafoundation.nova.common.view.TableCellView
         android:id="@+id/viewRewardDestinationPayoutAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:actionIcon="@drawable/ic_more"
-        app:enabled="false"
-        app:label="@string/staking_setup_reward_payout_account" />
+        app:primaryValueIcon="@drawable/ic_info_16"
+        app:title="@string/staking_setup_reward_payout_account" />
 </merge>
