--- a/feature-staking-impl/src/main/res/layout/fragment_bond_more.xml
+++ b/feature-staking-impl/src/main/res/layout/fragment_bond_more.xml
@@ -2,33 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bondMoreContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/bondMoreContainer"
     android:orientation="vertical"
     tools:background="@color/black">
 
     <io.novafoundation.nova.common.view.Toolbar
-        android:layout_width="match_parent"
         android:id="@+id/bondMoreToolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:dividerVisible="false"
         app:homeButtonIcon="@drawable/ic_close"
         app:titleText="@string/staking_bond_more_v1_9_0" />
 
-    <io.novafoundation.nova.common.view.AmountView
+    <io.novafoundation.nova.feature_wallet_api.presentation.view.amount.ChooseAmountView
+        android:id="@+id/bondMoreAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:id="@+id/bondMoreAmount"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp" />
 
     <io.novafoundation.nova.feature_wallet_api.presentation.view.FeeView
+        android:id="@+id/bondMoreFee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:id="@+id/bondMoreFee"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        app:dividerVisible="false" />
+
+    <io.novafoundation.nova.common.mixin.hints.HintsView
+        android:layout_width="match_parent"
+        android:id="@+id/bondMoreHints"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp" />
 
     <Space
@@ -37,11 +47,11 @@
         android:layout_weight="1" />
 
     <io.novafoundation.nova.common.view.PrimaryButton
+        android:id="@+id/bondMoreContinue"
         style="@style/Widget.Nova.Button.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:id="@+id/bondMoreContinue"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/common_continue" />
